--- a/src/app.html
+++ b/src/app.html
@@ -10,12 +10,74 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
 
-		<!-- Icon -->
-		
 
 		<title> Starpath </title>
+		<meta:og title="Leer Starpath by hyvnt" />
+		<meta:og description="Leer Starpath by hyvnt online. Read Starpath by hyvnt" />
 	</head>
 	<body data-sveltekit-preload-data="hover" >
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
+
+	<style>
+		
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Noto+Color+Emoji&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+/* Writer */
+@font-face {
+    font-family: 'Writer';
+    src: url('%sveltekit.assets%/fonts/Writer/Writer-Regular.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Writer';
+    src: url('%sveltekit.assets%/fonts/Writer/Writer-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Writer';
+    src: url('%sveltekit.assets%/fonts/Writer/Writer-Italic.ttf') format('truetype');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Writer';
+    src: url('%sveltekit.assets%/fonts/Writer/Writer-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Writer';
+    src: url('%sveltekit.assets%/fonts/Writer/Writer-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Writer';
+    src: url('%sveltekit.assets%/fonts/Writer/Writer-LightItalic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Writer';
+    src: url('%sveltekit.assets%/fonts/Writer/Writer-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Writer';
+    src: url('%sveltekit.assets%/fonts/Writer/Writer-MediumItalic.ttf') format('truetype');
+    font-weight: 500;
+    font-style: italic;
+}
+	</style>
 </html>
